--- a/Download/Download.csproj
+++ b/Download/Download.csproj
@@ -43,6 +43,12 @@
       <HintPath>..\packages\MarkdownDeep.Full.1.5\lib\.NetFramework 3.5\MarkdownDeep.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PagedList">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+    </Reference>
+    <Reference Include="PagedList.Mvc">
+      <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -193,6 +199,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\MarkdownDeep.css" />
     <Content Include="Content\MarkdownDeep_ToptenLogo.png" />
+    <Content Include="Content\PagedList.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -233,6 +240,7 @@
     <Content Include="Views\Product\EditVersion.cshtml" />
     <Content Include="Views\Product\DeleteVersion.cshtml" />
     <Content Include="Views\Account\_ChangeEmailPartial.cshtml" />
+    <Content Include="Views\Product\_SearchPartial.cshtml" />
     <None Include="Views\Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Views\Scripts\jquery-1.10.2.js" />
     <Content Include="Views\Scripts\jquery-1.10.2.min.js" />
