--- a/Download/Web.config
+++ b/Download/Web.config
@@ -21,7 +21,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="Path" value="C:\Users\DownloadProject" />
+    <add key="Path" value="C:\Users\" />
   </appSettings>
   <system.web>
     <roleManager enabled="true" />
