--- a/Download/packages.config
+++ b/Download/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
-  <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
+  <package id="EntityFramework" version="6.0.2" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="MarkdownDeep.Full" version="1.5" targetFramework="net45" />
@@ -25,6 +25,9 @@
   <package id="Microsoft.Owin.Security.OAuth" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Twitter" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="MiniProfiler" version="3.1" targetFramework="net45" />
+  <package id="MiniProfiler.EF6" version="3.0.11" targetFramework="net45" />
+  <package id="MiniProfiler.Mvc4" version="3.0.11" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
