--- a/Download/Download.csproj
+++ b/Download/Download.csproj
@@ -179,7 +179,6 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MarkdownDeepController.cs" />
     <Compile Include="Controllers\MarkdownDeepExtensions.cs" />
     <Compile Include="Controllers\ProductController.cs" />
@@ -267,6 +266,7 @@
     <Content Include="Views\Product\Remove.cshtml" />
     <Content Include="Views\Product\RemoveVersion.cshtml" />
     <Content Include="Views\Product\Description.cshtml" />
+    <Content Include="Views\Product\RemoveFile.cshtml" />
     <None Include="Views\Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Views\Scripts\jquery-1.10.2.js" />
     <Content Include="Views\Scripts\jquery-1.10.2.min.js" />
@@ -292,9 +292,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Account\_ChangePasswordPartial.cshtml" />
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
