--- a/Download/Download.csproj
+++ b/Download/Download.csproj
@@ -202,6 +202,10 @@
     <Compile Include="MigrationData\ProductMigrations\201406191406239_Added DbSet For ExFiles.Designer.cs">
       <DependentUpon>201406191406239_Added DbSet For ExFiles.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationData\ProductMigrations\201406231402455_Adding restrictions to ProductName.cs" />
+    <Compile Include="MigrationData\ProductMigrations\201406231402455_Adding restrictions to ProductName.Designer.cs">
+      <DependentUpon>201406231402455_Adding restrictions to ProductName.cs</DependentUpon>
+    </Compile>
     <Compile Include="MigrationData\ProductMigrations\Configuration.cs" />
     <Compile Include="MigrationData\UserMigrations\201406102204488_InitialCreate.cs" />
     <Compile Include="MigrationData\UserMigrations\201406102204488_InitialCreate.Designer.cs">
@@ -337,6 +341,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationData\ProductMigrations\201406191406239_Added DbSet For ExFiles.resx">
       <DependentUpon>201406191406239_Added DbSet For ExFiles.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationData\ProductMigrations\201406231402455_Adding restrictions to ProductName.resx">
+      <DependentUpon>201406231402455_Adding restrictions to ProductName.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationData\UserMigrations\201406102204488_InitialCreate.resx">
       <DependentUpon>201406102204488_InitialCreate.cs</DependentUpon>
