Added Status Column to ExtraFiles

--- a/Download/Download.csproj
+++ b/Download/Download.csproj
@@ -220,6 +220,10 @@
     <Compile Include="MigrationData\ProductMigrations\201406271528489_AddingFileSize.Designer.cs">
       <DependentUpon>201406271528489_AddingFileSize.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationData\ProductMigrations\201406272101267_AddingExFilesStatus.cs" />
+    <Compile Include="MigrationData\ProductMigrations\201406272101267_AddingExFilesStatus.Designer.cs">
+      <DependentUpon>201406272101267_AddingExFilesStatus.cs</DependentUpon>
+    </Compile>
     <Compile Include="MigrationData\ProductMigrations\Configuration.cs" />
     <Compile Include="MigrationData\UserMigrations\201406102204488_InitialCreate.cs" />
     <Compile Include="MigrationData\UserMigrations\201406102204488_InitialCreate.Designer.cs">
@@ -361,6 +365,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationData\ProductMigrations\201406271528489_AddingFileSize.resx">
       <DependentUpon>201406271528489_AddingFileSize.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationData\ProductMigrations\201406272101267_AddingExFilesStatus.resx">
+      <DependentUpon>201406272101267_AddingExFilesStatus.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationData\UserMigrations\201406102204488_InitialCreate.resx">
       <DependentUpon>201406102204488_InitialCreate.cs</DependentUpon>
