Changed connection string

--- a/Download/Web.Release.config
+++ b/Download/Web.Release.config
@@ -10,10 +10,15 @@
 
     <connectionStrings>
       <add name="MyDB"
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True"
+        connectionString="Server=tcp:zvnnol2a7g.database.windows.net,1433;Database=Downloads;User ID=stonefin@zvnnol2a7g;Password={your_password_here};Trusted_Connection=False;Encrypt=True;Connection Timeout=30;"
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <connectionStrings>
+    <add name="ProductDBContext"
+      connectionString="Server=tcp:zvnnol2a7g.database.windows.net,1433;Database=Downloads;User ID=stonefin@zvnnol2a7g;Password={your_password_here};Trusted_Connection=False;Encrypt=True;Connection Timeout=30;"
+      xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+  </connectionStrings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
