Structured the online database with migrations from Visual Studio, Downloaded WindowsAzure package, and Changed the create action to store files in the blob

--- a/Download/Download.csproj
+++ b/Download/Download.csproj
@@ -60,6 +60,26 @@
       <HintPath>..\packages\MarkdownDeep.Full.1.5\lib\.NetFramework 3.5\MarkdownDeep.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.Data.Edm, Version=5.6.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.Data.Edm.5.6.1\lib\net40\Microsoft.Data.Edm.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Data.OData, Version=5.6.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.Data.OData.5.6.1\lib\net40\Microsoft.Data.OData.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Data.Services.Client, Version=5.6.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.Data.Services.Client.5.6.1\lib\net40\Microsoft.Data.Services.Client.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.WindowsAzure.Configuration, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.WindowsAzure.ConfigurationManager.2.0.3\lib\net40\Microsoft.WindowsAzure.Configuration.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.WindowsAzure.Storage, Version=4.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\WindowsAzure.Storage.4.1.0\lib\net40\Microsoft.WindowsAzure.Storage.dll</HintPath>
+    </Reference>
     <Reference Include="MiniProfiler">
       <HintPath>..\packages\MiniProfiler.3.1\lib\net40\MiniProfiler.dll</HintPath>
     </Reference>
@@ -78,6 +98,10 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Spatial, Version=5.6.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\System.Spatial.5.6.1\lib\net40\System.Spatial.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -196,6 +220,16 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="MigrationData\DownloadMigrations\201407071559567_InitialCreate.cs" />
+    <Compile Include="MigrationData\DownloadMigrations\201407071559567_InitialCreate.Designer.cs">
+      <DependentUpon>201407071559567_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MigrationData\DownloadMigrations\Configuration.cs" />
+    <Compile Include="MigrationData\DownloadUserMigrations\201407071602224_InitialCreate.cs" />
+    <Compile Include="MigrationData\DownloadUserMigrations\201407071602224_InitialCreate.Designer.cs">
+      <DependentUpon>201407071602224_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MigrationData\DownloadUserMigrations\Configuration.cs" />
     <Compile Include="MigrationData\ProductMigrations\201406102204212_InitialCreate.cs" />
     <Compile Include="MigrationData\ProductMigrations\201406102204212_InitialCreate.Designer.cs">
       <DependentUpon>201406102204212_InitialCreate.cs</DependentUpon>
@@ -309,6 +343,7 @@
     </Content>
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
@@ -348,6 +383,12 @@
     <None Include="Project_Readme.html" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="MigrationData\DownloadMigrations\201407071559567_InitialCreate.resx">
+      <DependentUpon>201407071559567_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationData\DownloadUserMigrations\201407071602224_InitialCreate.resx">
+      <DependentUpon>201407071602224_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MigrationData\ProductMigrations\201406102204212_InitialCreate.resx">
       <DependentUpon>201406102204212_InitialCreate.cs</DependentUpon>
     </EmbeddedResource>
