--- a/Download/Web.Release.config
+++ b/Download/Web.Release.config
@@ -19,6 +19,10 @@
       connectionString="Server=tcp:zvnnol2a7g.database.windows.net,1433;Database=Downloads;User ID=stonefin@zvnnol2a7g;Password={your_password_here};Trusted_Connection=False;Encrypt=True;Connection Timeout=30;"
       xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
   </connectionStrings>
+  <appSettings>
+    <add key="StorageConnectionString" value="DefaultEndpointsProtocol=https;AccountName=
+   my-account-name;AccountKey=my-account-key" />
+    </appSettings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
