--- a/Download/packages.config
+++ b/Download/packages.config
@@ -17,6 +17,9 @@
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.Data.Edm" version="5.6.1" targetFramework="net45" />
+  <package id="Microsoft.Data.OData" version="5.6.1" targetFramework="net45" />
+  <package id="Microsoft.Data.Services.Client" version="5.6.1" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.0.0" targetFramework="net45" />
@@ -28,6 +31,7 @@
   <package id="Microsoft.Owin.Security.OAuth" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Twitter" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="2.0.3" targetFramework="net45" />
   <package id="MiniProfiler" version="3.1" targetFramework="net45" />
   <package id="MiniProfiler.EF6" version="3.0.11" targetFramework="net45" />
   <package id="MiniProfiler.Mvc4" version="3.0.11" targetFramework="net45" />
@@ -37,5 +41,7 @@
   <package id="PagedList" version="1.17.0.0" targetFramework="net45" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
+  <package id="System.Spatial" version="5.6.1" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
+  <package id="WindowsAzure.Storage" version="4.1.0" targetFramework="net45" />
 </packages>
