--- a/Download/packages.config
+++ b/Download/packages.config
@@ -42,6 +42,8 @@
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="System.Spatial" version="5.6.1" targetFramework="net45" />
+  <package id="TransientFaultHandling.Core" version="5.1.1209.1" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
+  <package id="windowsazure.mediaservices" version="3.0.0.5" targetFramework="net45" />
   <package id="WindowsAzure.Storage" version="4.1.0" targetFramework="net45" />
 </packages>
