--- a/Download/Web.config
+++ b/Download/Web.config
@@ -16,7 +16,7 @@
   <add name="ProductDBContext" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\ProductData.mdf;Initial Catalog=ProductData;Integrated Security=True; Trusted_Connection = Yes" providerName="System.Data.SqlClient" />-->
 
     
-    <add name="ProductDBContext" connectionString="Integrated Security=SSPI;Persist Security Info=False;User ID=sa;Initial Catalog=downloadStuff;Data Source=Donna" providerName="System.Data.SqlClient" />
+    <add name="ProductDBContext" connectionString="Server=tcp:zvnnol2a7g.database.windows.net,1433;Database=Downloads;User ID=stonefin@zvnnol2a7g;Password={your_password_here};Trusted_Connection=False;Encrypt=True;Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -24,7 +24,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <!-- <add key="Path" value="C:\Users\" /> -->
-    <add key="StorageConnectionString" value="DefaultEndpointsProtocol=https;AccountName=accountName;AccountKey=accountKey" />
+    <add key="StorageConnectionString" value="DefaultEndpointsProtocol=https;AccountName={AccountName};AccountKey={AccountKey}" />
   </appSettings>
   <system.web>
     <roleManager enabled="true" />
