--- a/Download/Web.Release.config
+++ b/Download/Web.Release.config
@@ -20,7 +20,8 @@
       xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
   </connectionStrings>
   <appSettings>
-    <add key="StorageConnectionString" value="DefaultEndpointsProtocol=https;AccountName={my-account-name};AccountKey={my-account-key}" />
+    <add key="StorageConnectionString" value="DefaultEndpointsProtocol=https;AccountName={my-account-name};AccountKey={my-account-key}"
+         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </appSettings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
