Changing Web.config

--- a/Download/Web.config
+++ b/Download/Web.config
@@ -24,7 +24,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <!-- <add key="Path" value="C:\Users\" /> -->
-    <add key="StorageConnectionString" value="DefaultEndpointsProtocol=https;AccountName={AccountName};AccountKey={AccountKey}" />
+    <add key="StorageConnectionString" value="DefaultEndpointsProtocol=https;AccountName={account_name};AccountKey={account_key}" />
   </appSettings>
   <system.web>
     <roleManager enabled="true" />
