--- a/Download/Web.Release.config
+++ b/Download/Web.Release.config
@@ -21,7 +21,7 @@
   </connectionStrings>
   <appSettings>
     <add key="StorageConnectionString" value="DefaultEndpointsProtocol=https;AccountName={my-account-name};AccountKey={my-account-key}"
-         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+         xdt:Transform="SetAttributes" xdt:Locator="Match(configuration/system.web/appSettings)"/>
     </appSettings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
