--- a/Download/Web.Release.config
+++ b/Download/Web.Release.config
@@ -20,8 +20,7 @@
       xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
   </connectionStrings>
   <appSettings>
-    <add key="StorageConnectionString" value="DefaultEndpointsProtocol=https;AccountName={my-account-name};AccountKey={my-account-key}"
-         xdt:Transform="SetAttributes" xdt:Locator="Match(configuration/system.web/appSettings)"/>
+    <add key="StorageConnectionString" value="DefaultEndpointsProtocol=https;AccountName={my-account-name};AccountKey={my-account-key}" />
     </appSettings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
